# django-fsm-2

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .typos.toml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: coverage.yml  docs.yml  lint.yml  release.yml  test.yml  tests.yml
django_fsm/: __init__.py  admin.py  apps.py  exceptions.py  log.py  models.py  py.typed  signals.py
django_fsm/contrib/unfold/: apps.py
django_fsm/contrib/unfold/templates/django_fsm/: fsm_admin_change_form.html  fsm_admin_transition_form.html  fsm_transition_button.html
django_fsm/management/commands/: graph_transitions.py
django_fsm/migrations/: 0001_initial.py
django_fsm/templates/django_fsm/: fsm_admin_change_form.html  fsm_admin_transition_form.html  fsm_transition_button.html  fsm_transition_form.html
django_fsm/tests/: test_basic_transitions.py  test_key_field.py  test_protected_fields.py  test_proxy_inheritance.py
django_fsm_2/: __init__.py  admin.py  log.py  signals.py
django_fsm_2/management/commands/: graph_transitions.py
django_fsm_2/templates/django_fsm_2/: fsm_admin_change_form.html  fsm_transition_form.html
django_fsm_2/tests/: test_abstract_inheritance.py  test_basic_transitions.py  test_conditions.py  test_integer_field.py  test_key_field.py  test_protected_field.py  test_protected_fields.py
django_fsm_log/: admin.py  decorators.py  models.py
django_fsm_rx/: __init__.py  admin.py  log.py  py.typed  signals.py  widgets.py
django_fsm_rx/contrib/: __init__.py  rules.py
django_fsm_rx/management/commands/: graph_transitions.py
django_fsm_rx/static/django_fsm_rx/css/: cascade_widget.css
django_fsm_rx/static/django_fsm_rx/js/: cascade_widget.js
django_fsm_rx/templates/django_fsm_rx/widgets/: cascade_select.html
docs/: admin.md  best-practices.md  concurrency.md  contributing.md  extensions.md  fields.md  graphing.md  helpers.md  index.md  installation.md  signals.md  transitions.md
fsm_admin/: mixins.py
mypy_stubs/django_fsm_log/: decorators.pyi
requirements/: compile.py
tests/: conftest.py  manage.py  settings.py  test_admin_integration.py  test_callback_edge_cases.py  test_callbacks.py  test_cascade_widget.py  test_category_patterns.py  test_contrib_rules.py  test_fsm_state_consistency.py  test_prefix_pattern_edge_cases.py  test_signal_exception_context.py  urls.py  wsgi.py
tests/testapp/: admin.py  admin_forms.py  choices.py  forms.py  models.py
tests/testapp/fixtures/: test_states_data.json
tests/testapp/tests/: test_abstract_inheritance.py  test_access_deferred_fsm_field.py  test_admin.py  test_admin_async.py  test_admin_regression.py  test_async_transitions.py  test_basic_transitions.py  test_conditions.py  test_core_regression.py  test_custom_data.py  test_edge_cases.py  test_exception_transitions.py  test_graph_transitions.py  test_integer_field.py  test_key_field.py  test_lock_mixin.py  test_log.py  test_mixin_support.py  test_model_create_with_generic.py  test_multi_resultstate.py  test_multidecorators.py  test_object_permissions.py  test_permissions.py  test_protected_field.py  test_protected_fields.py  test_proxy_inheritance.py  test_state_transitions.py  test_string_field_parameter.py  test_transition_all_except_target.py  test_transition_hash_eq.py  test_transition_tracking.py  test_typing.py
