[project]
name = "django-fsm-2"
version = "4.1.0"
description = "Django friendly finite state machine support."
authors = [{ name = "Mikhail Podgurskiy", email = "kmmbvnr@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["django>=4.2"]

[project.urls]
Homepage = "https://github.com/django-commons/django-fsm-2"
Repository = "https://github.com/django-commons/django-fsm-2"
Documentation = "https://github.com/django-commons/django-fsm-2"

[dependency-groups]
graphviz = ["graphviz"]
dev = [
    "coverage",
    "django-guardian",
    "graphviz",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "tox",
]

[tool.uv]
default-groups = [
    "graphviz",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["/django_fsm_2"]

[tool.hatch.build.targets.wheel]
packages = ["django_fsm_2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.ruff]
line-length = 130
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812",  # This rule may cause conflicts when used with the formatter
    "D",  # pydocstyle
    "DOC",  # pydoclint
    "B",
    "PTH",
    "ANN",  # Missing type annotation
    "S101",  # Use of `assert` detected
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "TRY002",  # Create your own exception
    "TRY003",  # Avoid specifying long messages outside the exception class
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "SLF001",  # Private member accessed
    "SIM103",  # Return the condition directly
    "PLC0415",  # `import` should be at the top-level of a file
    "PLR0913",  # Too many arguments in function definition
]
fixable = [
    "I",  # isort
    "RUF100",  # Unused `noqa` directive
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "DJ008",  # Model does not define `__str__` method
]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]
