[project]
name = "django-fsm-rx"
version = "5.0.2"
description = "Django friendly finite state machine support. RX = Remanufactured."
readme = "README.md"
license = "MIT"
authors = [
    { name = "specialorange" },
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/specialorange/django-fsm-rx"
Repository = "https://github.com/specialorange/django-fsm-rx"
Documentation = "https://github.com/specialorange/django-fsm-rx"

[project.optional-dependencies]
graphviz = [
    "graphviz",
]

[dependency-groups]
dev = [
    "coverage",
    "django-guardian",
    "graphviz",
    "pre-commit",
    "pytest",
    "pytest-cov>=4.1.0",
    "pytest-django",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_fsm_rx", "django_fsm", "django_fsm_2"]

[tool.hatch.build.targets.sdist]
include = [
    "/django_fsm_rx",
    "/django_fsm",
    "/django_fsm_2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.ruff]
line-length = 130
target-version = "py310"
fix = true

[tool.ruff.lint]
extend-select = [
    "F",     # Pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "UP",    # pyupgrade
    "I",     # isort
    "PERF",
    "RET",
    "C",
]
fixable = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "DJ008",  # Model does not define `__str__` method
]
"django_fsm_rx/admin.py" = [
    "C901",  # fsm_transition_view complexity is acceptable
]
"django_fsm_rx/management/commands/graph_transitions.py" = [
    "C901",  # handle complexity is acceptable
]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "graphviz.*",
    "django_guardian.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"
